# SimpleStoreWithDjango

./: .env.sample  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: setup_moderator_group.py
catalog/migrations/: 0003_alter_category_options_alter_product_options_and_more.py
catalog/templates/: base.html  product_detail.html  product_list.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_by_category.html
catalog/templates/catalog/includes/: inc_menu.html
catalog/templates/includes/: inc_menu.html
config/: settings.py  urls.py
mailings/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
mailings/management/commands/: send_mailing.py  setup_manager_group.py
mailings/templates/mailings/: attempt_list.html  base.html  client_confirm_delete.html  client_detail.html  client_form.html  client_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/templates/users/: login.html  register.html
